Updates: #3 Filter functionality on home page #4 Search functionality on home page

--- a/src/app/modules/job-finder/components/featured-job/featured-job.component.html
+++ b/src/app/modules/job-finder/components/featured-job/featured-job.component.html
@@ -1,40 +1,51 @@
 <div class="main-wrapper">
 	<h3>Featured Jobs</h3>
-	<section class="section-wrapper" *ngFor="let job of jobs">
-		<div class="section-header">
-			<span class="img-wrapper header-image"
-				><img src="../../../../../assets/img/gitlab.png" alt=""
-			/></span>
-			<div class="header-wrapper">
-				<p class="title">{{ job.title }}</p>
-				<p class="company">{{ job.company }}</p>
-				<p class="city">{{ job.city }}</p>
+	<div *ngIf="jobs.length > 0; else noJobs">
+		<section class="section-wrapper" *ngFor="let job of jobs">
+			<div class="section-header">
+				<span class="img-wrapper header-image"
+					><img src="../../../../../assets/img/gitlab.png" alt=""
+				/></span>
+				<div class="header-wrapper">
+					<p class="title">{{ job.title }}</p>
+					<p class="company">{{ job.company }}</p>
+					<p class="city">{{ job.city }}</p>
+				</div>
+				<span>
+					<a href="#"
+						><app-svg-icon [svgIconId]="'eye'"></app-svg-icon
+					></a>
+				</span>
 			</div>
-			<span>
-				<a href="#"
-					><app-svg-icon [svgIconId]="'eye'"></app-svg-icon
-				></a>
-			</span>
-		</div>
-		<div class="section-content">
-			<p>{{ job.description }}</p>
-		</div>
-		<div class="section-footer">
-			<div class="footer-content">
-				<img src="../../../../../assets/img/dollar_icon.png" alt="" />
-				<p>{{ job.salary }}</p>
+			<div class="section-content">
+				<p>{{ job.description }}</p>
 			</div>
-			<div class="footer-content">
-				<img src="../../../../../assets/img/people_icon.png" alt="" />
-				<p>{{ job.applicants }} Applications</p>
+			<div class="section-footer">
+				<div class="footer-content">
+					<img
+						src="../../../../../assets/img/dollar_icon.png"
+						alt=""
+					/>
+					<p>{{ job.salary }}</p>
+				</div>
+				<div class="footer-content">
+					<img
+						src="../../../../../assets/img/people_icon.png"
+						alt=""
+					/>
+					<p>{{ job.applicants }} Applications</p>
+				</div>
+				<div class="footer-content">
+					<img
+						src="../../../../../assets/img/location_point_icon.png"
+						alt=""
+					/>
+					<p>{{ job.type }}</p>
+				</div>
 			</div>
-			<div class="footer-content">
-				<img
-					src="../../../../../assets/img/location_point_icon.png"
-					alt=""
-				/>
-				<p>{{ job.type }}</p>
-			</div>
-		</div>
-	</section>
+		</section>
+	</div>
+	<ng-template #noJobs>
+		<p>No suitable jobs found.</p>
+	</ng-template>
 </div>
