--- a/src/app/modules/job-finder/components/landing/landing.component.scss
+++ b/src/app/modules/job-finder/components/landing/landing.component.scss
@@ -2,9 +2,9 @@
 
 .filters {
 	display: grid;
-	grid-template-columns: repeat(6, 1fr);
+	grid-template-columns: repeat(6, 1fr) 0.5fr;
 	padding: 1em 2em;
-	
+
 	.search-wrapper {
 		margin-right: 1em;
 		position: relative;
@@ -46,6 +46,12 @@ button svg {
 	width: 24px;
 }
 
+.btn-reset {
+	background-color: rgb(121, 121, 255);
+	border-radius: 5px;
+	margin: 0.5em 2em;
+}
+
 .menu-option {
 	padding-right: 24px;
 	color: $secondary-text;
@@ -63,7 +69,7 @@ button svg {
 	margin: 12px 0;
 	padding: 0;
 	background: white;
-	box-shadow: 0 0 5px rgba(0,0,0,0.25);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
 	border-radius: 5px;
 }
 
