comment finance dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 		<button routerLink="job-finder">View Template</button>
 	</div>
 
-	<div class="card">
+	<!-- <div class="card">
 		<h3 class="card__heading">Finance Dashboard Template</h3>
 		<p class="card__description">
 			This is a website template to track your finances. This website is
@@ -56,7 +56,7 @@
 				>View Template</a
 			>
 		</button>
-	</div>
+	</div> -->
 </div>
 
 <router-outlet></router-outlet>
