Added Easy Loan template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,21 @@
 		<button routerLink="job-finder">View Template</button>
 	</div>
 
+	<div class="card">
+		<h3 class="card__heading">Easy Loan Template</h3>
+		<p class="card__description">
+			This is a sample website template to apply for loans. This website is
+			built using HTML, CSS and ReactJS.
+		</p>
+		<button>
+			<a
+				href="https://easy-loan-delta.vercel.app"
+				target="_blank"
+				>View Template</a
+			>
+		</button>
+	</div>
+
 	<!-- <div class="card">
 		<h3 class="card__heading">Finance Dashboard Template</h3>
 		<p class="card__description">
