--- a/src/app/modules/e-market/components/product/product.component.html
+++ b/src/app/modules/e-market/components/product/product.component.html
@@ -1,32 +1,64 @@
 <app-spinner *ngIf="isLoading"></app-spinner>
 <div class="page-container">
-    <div class="container">
-        <h1 class="page-heading">{{ pageHeading }}</h1>
-        <div class="products">
-            <div *ngFor="let product of products" class="product-card">
-                <div class="product-image">
-                    <img [src]="product.imageUrl" alt="">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">{{ product.name }}</h3>
-                    <span>{{ product.cost | currency : 'INR' }} / {{ product.unit }}</span>
-                    <div class="quantity-container">
-                        <div class="quantity-wrapper">
-                            <a (click)="removeQuantity($event, product)" href="#">
-                                <app-svg-icon [svgIconId]="'minus-sm'"></app-svg-icon>
-                            </a>
-                            <input id="quantity" name="quantity" [(ngModel)]="product.quantity" type="text" aria-label="Quantity">
-                            <a (click)="addQuantity($event, product)" href="#">
-                                <app-svg-icon [svgIconId]="'plus-sm'"></app-svg-icon>
-                            </a>
-                        </div>
+	<div class="container">
+		<div class="header-container">
+			<h1>{{ pageHeading }}</h1>
+			<div class="search-input-wrapper">
+				<input
+					aria-label="Search"
+					id="search-input"
+					name="search"
+					type="search"
+					placeholder="Search"
+					(keyup)="search()"
+					[(ngModel)]="searchTerm"
+				/>
+			</div>
+		</div>
+		<div class="products">
+			<div *ngFor="let product of filteredProducts" class="product-card">
+				<div class="product-image">
+					<img [src]="product.imageUrl" alt="" />
+				</div>
+				<div class="product-info">
+					<h3 class="product-title">{{ product.name }}</h3>
+					<span
+						>{{ product.cost | currency : "INR" }} /
+						{{ product.unit }}</span
+					>
+					<div class="quantity-container">
+						<div class="quantity-wrapper">
+							<a
+								(click)="removeQuantity($event, product)"
+								href="#"
+							>
+								<app-svg-icon
+									[svgIconId]="'minus-sm'"
+								></app-svg-icon>
+							</a>
+							<input
+								id="quantity"
+								name="quantity"
+								[(ngModel)]="product.quantity"
+								type="text"
+								aria-label="Quantity"
+							/>
+							<a (click)="addQuantity($event, product)" href="#">
+								<app-svg-icon
+									[svgIconId]="'plus-sm'"
+								></app-svg-icon>
+							</a>
+						</div>
 
-                        <button (click)="addToCart(product)" class="btn btn-primary">
-                            <app-svg-icon [svgIconId]="'cart'"></app-svg-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+						<button
+							(click)="addToCart(product)"
+							class="btn btn-primary"
+						>
+							<app-svg-icon [svgIconId]="'cart'"></app-svg-icon>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
