--- a/src/app/modules/e-market/components/footer/footer.component.html
+++ b/src/app/modules/e-market/components/footer/footer.component.html
@@ -1,39 +1,43 @@
 <footer>
-    <h2>sign up to newsletter</h2>
-    <p>Get the latest updates on new products and upcoming sales</p>
+	<h2>sign up to newsletter</h2>
+	<p>Get the latest updates on new products and upcoming sales</p>
 
-    <div class="subscribe">
-        <input aria-label="Email" placeholder="Your email address" type="text">
-        <button class="btn btn-primary">subscribe</button>
-    </div>
+	<div class="subscribe">
+		<input
+			aria-label="Email"
+			placeholder="Your email address"
+			type="text"
+		/>
+		<button class="btn btn-primary">subscribe</button>
+	</div>
 
-    <div class="footer-links-wrapper">
-        <div class="footer-links">
-            <h3>Address</h3>
-            <p>H.No 123, Electronic city</p>
-            <p>Bangalore, India</p>
-        </div>
-        <div class="footer-links">
-            <h3>Navigate</h3>
-            <a href="#" routerLink="contact">Contact Us</a>
-            <a href="#" routerLink="blog">Blog</a>
-        </div>
-        <div class="footer-links">
-            <h3>Categories</h3>
-            <a href="#" routerLink="product/fruit">Fruits</a>
-            <a href="#" routerLink="product/vegetable">Vegetables</a>
-        </div>
-        <div class="social">
-            <h3>Follow Us</h3>
-            <a href="#">
-                <app-svg-icon [svgIconId]="'twitter'"></app-svg-icon>
-            </a>
-            <a href="#">
-                <app-svg-icon [svgIconId]="'instagram'"></app-svg-icon>
-            </a>
-            <a href="#">
-                <app-svg-icon [svgIconId]="'facebook'"></app-svg-icon>
-            </a>
-        </div>
-    </div>
+	<div class="footer-links-wrapper">
+		<div class="footer-links">
+			<h3>Address</h3>
+			<p>H.No 123, Electronic city</p>
+			<p>Bangalore, India</p>
+		</div>
+		<div class="footer-links">
+			<h3>Navigate</h3>
+			<a href="#" routerLink="contact">Contact Us</a>
+			<a href="#" routerLink="blog">Blog</a>
+		</div>
+		<div class="footer-links">
+			<h3>Categories</h3>
+			<a href="#" routerLink="product/fruit">Fruits</a>
+			<a href="#" routerLink="product/vegetable">Vegetables</a>
+		</div>
+		<div class="social">
+			<h3>Follow Us</h3>
+			<a href="https://www.twitter.com" target="_blank">
+				<app-svg-icon [svgIconId]="'twitter'"></app-svg-icon>
+			</a>
+			<a href="https://www.instagram.com" target="_blank">
+				<app-svg-icon [svgIconId]="'instagram'"></app-svg-icon>
+			</a>
+			<a href="https://www.facebook.com" target="_blank">
+				<app-svg-icon [svgIconId]="'facebook'"></app-svg-icon>
+			</a>
+		</div>
+	</div>
 </footer>
