--- a/src/app/modules/e-market/components/product/product.component.html
+++ b/src/app/modules/e-market/components/product/product.component.html
@@ -15,11 +15,8 @@
 				/>
 			</div>
 		</div>
-		<div class="product-card-wrapper">
+		<div class="product-card-wrapper product-card-lg">
 			<div *ngFor="let product of filteredProducts" class="product-card">
-				<!-- <div class="product-image">
-					<img [src]="product.imageUrl" alt="" />
-				</div> -->
 				<img [src]="product.imageUrl" alt="" />
 				<div class="product-info">
 					<h3 class="product-title">{{ product.name }}</h3>
@@ -58,6 +55,62 @@
 							<app-svg-icon [svgIconId]="'cart'"></app-svg-icon>
 						</button>
 					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="product-card-sm">
+			<div *ngFor="let product of filteredProducts" class="product">
+				<div class="product-image">
+					<img [src]="product.imageUrl" [alt]="product.name" />
+				</div>
+				<div class="product-details-wrapper-sm">
+					<div class="product-details">
+						<span>{{ product.name }}</span>
+						<span
+							>{{ product.cost | currency : "INR" }} /
+							{{ product.unit }}</span
+						>
+					</div>
+					<div>
+						<button (click)="openAdd(product)" class="cart-btn">
+							<app-svg-icon [svgIconId]="'cart'"></app-svg-icon>
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="add-to-cart">
+				<div class="quantity-container">
+					<div class="quantity-wrapper">
+						<p>{{ item.name }}</p>
+						<div class="quantity">
+							<a href="#" (click)="removeQuantity($event, item)">
+								<app-svg-icon
+									[svgIconId]="'minus-sm'"
+								></app-svg-icon>
+							</a>
+							<input
+								id="quantity"
+								name="quantity"
+								type="text"
+								aria-label="Quantity"
+								[(ngModel)]="item.quantity"
+							/>
+							<a href="#" (click)="addQuantity($event, item)">
+								<app-svg-icon
+									[svgIconId]="'plus-sm'"
+								></app-svg-icon>
+							</a>
+						</div>
+					</div>
+
+					<button class="btn-cart btn-add" (click)="addToCart(item)">
+						ADD TO CART
+					</button>
+					<button class="btn-cart btn-cancel" (click)="cancelAdd()">
+						CANCEL
+					</button>
 				</div>
 			</div>
 		</div>
