--- a/src/styles/_emarket.scss
+++ b/src/styles/_emarket.scss
@@ -382,6 +382,14 @@ $text-background: #f5f5f5;
 	}
 
 	/******* FEATURED PRODUCTS ****/
+	.product-card-lg {
+		display: block;
+	}
+
+	.product-card-sm {
+		display: none;
+	}
+
 	.product-card-wrapper {
 		display: grid;
 		grid-auto-flow: row;
@@ -1206,7 +1214,7 @@ $text-background: #f5f5f5;
 		}
 
 		.container {
-			margin: 3em;
+			margin: 3em 1.5em;
 		}
 
 		nav {
@@ -1333,6 +1341,132 @@ $text-background: #f5f5f5;
 
 				input {
 					width: 100%;
+				}
+			}
+		}
+
+		.product-card-lg {
+			display: none;
+		}
+
+		.product-card-sm {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			gap: 1em;
+
+			.product-image {
+				display: grid;
+				align-items: center;
+				justify-content: center;
+				border-bottom: 2px solid #f2f2f2;
+			}
+
+			.product {
+				box-shadow: 5px 5px 15px rgba(0 0 0 / 0.25);
+				border-radius: 5px;
+			}
+
+			.product-details-wrapper-sm {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				gap: 1em;
+				margin-inline: 0.5em;
+			}
+
+			.cart-btn {
+				background-color: #fea45b;
+				border: none;
+				padding: 0.5em;
+				border-radius: 3px;
+
+				#cart {
+					margin-right: 0;
+					fill: white;
+					width: 14px;
+					height: 14px;
+				}
+			}
+
+			.product-details {
+				display: flex;
+				flex-direction: column;
+				gap: 0.5em;
+				padding-inline: 0.75em;
+				margin-top: 1em;
+				font-size: 14px;
+
+				span:last-child {
+					font-weight: 700;
+				}
+			}
+
+			img {
+				height: 100px;
+				width: 100px;
+				display: inline-block;
+				align-self: center;
+			}
+
+			.add-to-cart {
+				position: fixed;
+				transform: translateY(100vh);
+				background: #4c4b4b;
+				padding: 2em;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				transition: transform 0.5s ease;
+
+				&.open {
+					transform: translateY(-28vh);
+				}
+
+				.quantity-container {
+					flex-direction: column;
+
+					svg {
+						height: 36px;
+						width: 36px;
+					}
+
+					input {
+						height: 40px;
+						width: 70px;
+					}
+				}
+
+				.quantity-wrapper {
+					justify-content: space-between;
+
+					p {
+						color: white;
+						font-size: 16px;
+					}
+
+					.quantity {
+						display: flex;
+						align-items: center;
+						justify-content: center;
+					}
+				}
+
+				.btn-cart {
+					height: 40px;
+					border: none;
+					border-radius: 3px;
+					font-family: inherit;
+					color: white;
+					font-weight: 700;
+					letter-spacing: 1px;
+				}
+
+				.btn-add {
+					background-color: #fc7947;
+				}
+
+				.btn-cancel {
+					background-color: slategrey;
 				}
 			}
 		}
