--- a/src/app/modules/e-market/components/checkout/checkout.component.html
+++ b/src/app/modules/e-market/components/checkout/checkout.component.html
@@ -1,79 +1,23 @@
 <div class="page-container">
-    <div class="container">
-        <h1 class="page-heading">Checkout</h1>
+	<div class="container">
+		<!-- <h1 class="page-heading">Checkout</h1> -->
 
-        <app-alerts [alertDetails]="alert"></app-alerts>
+		<app-alerts [alertDetails]="alert"></app-alerts>
 
-        <section *ngIf="showCheckout" class="checkout-container">
-            <div>
-                <!--Customer-->
-                <app-accordion heading="Customer">
-                    <div *ngIf="!isLoggedIn(); else loginDetails">
-                        <form (ngSubmit)="submitCustomerForm()" [formGroup]="customerForm">
-                            <app-input [form]="customerForm"
-                                       fieldName="email"
-                                       formControlName="email"
-                                       id="email"
-                                       label="Email"></app-input>
-                            <div class="btn-container">
-                                <button class="btn btn-primary">Continue as guest</button>
-                            </div>
-                        </form>
-
-                        Already have an account?
-                        <a href="#" (click)="navigateToLogin($event)">Sign in now</a>
-                    </div>
-                    <ng-template #loginDetails>
-                        Your are logged in as {{ getUserEmail() }}
-                    </ng-template>
-                </app-accordion>
-                <!--Shipping-->
-                <app-accordion heading="Shipping">
-                    <app-address [form]="shippingForm" [states]="states"></app-address>
-                </app-accordion>
-                <!--Billing-->
-                <app-accordion heading="Billing">
-                    <div class="checkbox-container">
-                        <label class="checkbox-label"> Same as shipping address
-                            <input (change)="setBillingForm()"
-                                   [(ngModel)]="sameAsShipping"
-                                   name="address"
-                                   type="checkbox"
-                                   value="sameAsShipping">
-                            <span class="tick"></span>
-                        </label>
-                    </div>
-
-                    <div>
-                        <app-address *ngIf="!sameAsShipping"
-                                     [form]="billingForm"
-                                     [states]="states"></app-address>
-                    </div>
-
-                </app-accordion>
-                <!--Payment-->
-                <app-accordion heading="Payment">
-                    <button (click)="pay()" class="btn btn-primary">Pay using card</button>
-                </app-accordion>
-            </div>
-
-            <div class="order-summary">
-                <div class="order-summary-heading">
-                    <h3>Order Summary</h3>
-                    <a href="#" routerLink="../cart">Edit cart</a>
-                </div>
-                <div>
-                    <ul *ngFor="let product of products" class="product-summary">
-                        <li>{{ product.name }}</li>
-                        <li>{{ product.noOfItems + ' X ' + product.cost}}</li>
-                        <li>{{ product.noOfItems * product.cost | currency: 'INR'}}</li>
-                    </ul>
-                    <ul class="product-summary product-total">
-                        <li><strong>Total</strong></li>
-                        <li><strong>{{ calculateTotalCost() | currency: 'INR'}}</strong></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </div>
+		<section class="side-layout-wrapper">
+			<div>
+				<app-cart *ngIf="pageName == 'cart'"></app-cart>
+				<app-address
+					[form]="shippingForm"
+					[states]="states"
+					*ngIf="pageName == 'shipping'"
+				></app-address>
+				<app-payment *ngIf="pageName == 'payment'"></app-payment>
+			</div>
+			<app-order-summary
+				[products]="products"
+				[pageName]="'cart'"
+			></app-order-summary>
+		</section>
+	</div>
 </div>
