--- a/src/styles/_radio.scss
+++ b/src/styles/_radio.scss
@@ -1,47 +1,62 @@
 .radio-label {
-  display      : inline-block;
-  position     : relative;
-  padding-left : 32px;
-  padding-top  : 3px;
-  cursor       : pointer;
+	display: inline-block;
+	position: relative;
+	padding-left: 32px;
+	padding-top: 3px;
+	cursor: pointer;
 }
 
 .radio-label + .radio-label {
-  margin-left : 18px;
+	margin-left: 18px;
 }
 
-.radio-label input[type=radio] {
-  display : none;
+.radio-label input[type="radio"] {
+	display: none;
 }
 
 .radio-label .checker {
-  display       : inline-block;
-  width         : 25px;
-  height        : 25px;
-  border-radius : 50%;
-  background    : transparent;
-  position      : absolute;
-  top           : 0;
-  left          : 0;
-  border        : 1.5px solid #D3D3D3;
-  transition    : all 0.5s ease;
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: transparent;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: 1.5px solid #d3d3d3;
+	transition: all 0.5s ease;
 }
 
 .radio-label input:checked ~ .checker-inside {
-  background-color : #BE5A38;
+	background-color: #be5a38;
 }
 
 .radio-label input:checked ~ .checker:after {
-  content       : "";
-  width         : 10px;
-  height        : 10px;
-  border-radius : 50%;
-  position      : absolute;
-  top           : 50%;
-  left          : 50%;
-  transform     : translate(-50%, -50%);
+	content: "";
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .radio-label input:checked ~ .checker-inside:after {
-  background-color : #FFFFFF;
+	background-color: #ffffff;
+}
+
+.radio-label input:checked ~ .checker-outside {
+	background-color: #ffffff;
+}
+
+.radio-label input:checked ~ .checker-outside:after {
+	background-color: #279af1;
+}
+
+.radio-label span {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5em;
 }
