Navigate to checkout

--- a/src/app/modules/e-market/components/header/header.component.html
+++ b/src/app/modules/e-market/components/header/header.component.html
@@ -80,7 +80,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#" routerLink="cart">
+					<a href="#" routerLink="checkout">
 						<app-svg-icon [svgIconId]="'cart'"></app-svg-icon>
 						<span *ngIf="hasItems()" class="badge">{{
 							numberOfItems
