Redirect e-market to different site

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,11 @@
 			This is a website template to buy fruits and vegetables. This
 			website is built using HTML, CSS and Angular.
 		</p>
-		<button routerLink="e-market">View Template</button>
+		<button>
+			<a href="https://e-market-p0je.onrender.com" target="_blank"
+				>View Template</a
+			>
+		</button>
 	</div>
 
 	<div class="card">
@@ -46,13 +50,11 @@
 	<div class="card">
 		<h3 class="card__heading">Easy Loan Template</h3>
 		<p class="card__description">
-			This is a sample website template to apply for loans. This website is
-			built using HTML, CSS and ReactJS.
+			This is a sample website template to apply for loans. This website
+			is built using HTML, CSS and ReactJS.
 		</p>
 		<button>
-			<a
-				href="https://easy-loan-delta.vercel.app"
-				target="_blank"
+			<a href="https://easy-loan-delta.vercel.app" target="_blank"
 				>View Template</a
 			>
 		</button>
